属性は改行するように修正

--- a/src/components/common/Breadcrumb.astro
+++ b/src/components/common/Breadcrumb.astro
@@ -14,7 +14,10 @@ const { index } = Astro.props;
 // ==================================================================
 ---
 
-<nav class="root" aria-label="パンくずリスト">
+<nav
+  class="root"
+  aria-label="パンくずリスト"
+>
   <div class="inner">
     <ul class="list">
       {
