--- a/src/components/parts/Accordion.astro
+++ b/src/components/parts/Accordion.astro
@@ -5,22 +5,38 @@
   <ul>
     <li>
       <div class="accordionItem">
-        <button type="button" class="accordionItem__button">
+        <button
+          type="button"
+          class="accordionItem__button"
+        >
           アコーディオンボタン
           <span class="button__mark"><span class="accordionItem__button__mark">開く</span></span>
         </button>
 
-        <div class="accordionItem__body" aria-hidden="true">アコーディオンボディ</div>
+        <div
+          class="accordionItem__body"
+          aria-hidden="true"
+        >
+          アコーディオンボディ
+        </div>
       </div>
     </li>
     <li>
       <div class="accordionItem">
-        <button type="button" class="accordionItem__button">
+        <button
+          type="button"
+          class="accordionItem__button"
+        >
           アコーディオンボタン
           <span class="button__mark"><span class="accordionItem__button__mark">開く</span></span>
         </button>
 
-        <div class="accordionItem__body" aria-hidden="true">アコーディオンボディ</div>
+        <div
+          class="accordionItem__body"
+          aria-hidden="true"
+        >
+          アコーディオンボディ
+        </div>
       </div>
     </li>
   </ul>
