--- a/src/components/parts/Modal.astro
+++ b/src/components/parts/Modal.astro
@@ -2,14 +2,20 @@
 ---
 
 <div class="root modal">
-  <button type="button" class="button modal__button">
+  <button
+    type="button"
+    class="button modal__button"
+  >
     モーダルボタン
 
     <div class="menu__text modal__button__text">開く</div>
   </button>
 
   <div role="dialog">
-    <nav class="nav modal__body" aria-label="__dummy__">
+    <nav
+      class="nav modal__body"
+      aria-label="__dummy__"
+    >
       <div class="modal__body__inner">
         モーダルボディ
 
