--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -4,10 +4,17 @@ import Section from "@src/components/common/Section.astro";
 import Heading from "@src/components/parts/Heading.astro";
 ---
 
-<BaseLayout title="__dummy__" description="__dummy__" ogImage="__dummy__.jpg">
+<BaseLayout
+  title="__dummy__"
+  description="__dummy__"
+  ogImage="__dummy__.jpg"
+>
   <main>
     <Section>
-      <Heading level={1} text="ページが存在しません。" />
+      <Heading
+        level={1}
+        text="ページが存在しません。"
+      />
     </Section>
   </main>
 </BaseLayout>
