--- a/src/pages/dev/index.astro
+++ b/src/pages/dev/index.astro
@@ -5,10 +5,16 @@ import Section from "@src/components/common/Section.astro";
 import Heading from "@src/components/parts/Heading.astro";
 ---
 
-<BaseLayout title="開発用ページ" description="開発用ページ">
+<BaseLayout
+  title="開発用ページ"
+  description="開発用ページ"
+>
   <main>
     <Section>
-      <Heading level={1} text="開発用ページ" />
+      <Heading
+        level={1}
+        text="開発用ページ"
+      />
 
       <ul>
         <li>
