--- a/src/pages/dev/pagelist/index.astro
+++ b/src/pages/dev/pagelist/index.astro
@@ -6,10 +6,16 @@ import Heading from "@src/components/parts/Heading.astro";
 import { PAGELIST } from "@src/config";
 ---
 
-<BaseLayout title="ページリスト" description="ページリスト">
+<BaseLayout
+  title="ページリスト"
+  description="ページリスト"
+>
   <main>
     <Section>
-      <Heading level={1} text="ページリスト" />
+      <Heading
+        level={1}
+        text="ページリスト"
+      />
 
       <table>
         <thead>
