--- a/src/components/parts/Toggle.astro
+++ b/src/components/parts/Toggle.astro
@@ -37,27 +37,81 @@ const { buttonText, bodyText } = Astro.props;
 
   // ---------- 基底要素 ----------
   .root {
-    margin-top: g.rem(20px);
-
-    @include g.mediaQuery() {
-      margin-top: g.rem(40px);
-    }
+    width: 100%;
+    margin-top: g.rem(40px);
+    border: 1px solid g.$base-color;
   }
 
   // ---------- 基底要素のインナー要素 ----------
   .inner {
   }
 
-  // ---------- トグルを開閉するボタン ----------
+  // ---------- トグルを開閉するボタン要素 ----------
   .button {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    padding: g.rem(20px);
+    position: relative;
+
+    @include g.mediaQuery() {
+      transform: translateX(g.rem(-4px)) translateZ(0);
+    }
   }
 
-  // ---------- トグルが開いているとき ----------
+  // ---------- トグルボタン内の開閉を示すアイコン要素 ----------
+  .button__mark {
+    width: g.rem(30px);
+    height: g.rem(30px);
+    margin: auto;
+    border: 1px solid g.$base-color;
+    border-radius: 50vh;
+    position: absolute;
+    top: 0;
+    right: g.rem(20px);
+    bottom: 0;
+
+    @include g.mediaQuery() {
+      width: g.rem(35px);
+      height: g.rem(35px);
+    }
+
+    // 十字線
+    &::before,
+    &::after {
+      content: "";
+      display: block;
+      background: g.$base-color;
+      width: g.rem(15px);
+      height: g.rem(1px);
+      margin: auto;
+      transition: 0.2s transform ease-in-out;
+      position: absolute;
+      inset: 0;
+
+      @include g.mediaQuery() {
+        width: g.rem(15px);
+        height: g.rem(1px);
+      }
+    }
+
+    // 縦線
+    &::before {
+      transform: rotate(90deg);
+    }
+  }
+
+  // ---------- トグル本体要素が開いているとき ----------
   .button[aria-expanded="true"] {
+    .button__mark::before {
+      transform: rotate(0);
+    }
   }
 
-  // ---------- トグル本体 ----------
+  // ---------- トグル本体要素 ----------
   .body {
+    padding: 0 g.rem(20px) g.rem(20px);
   }
 
   .body__inner {
