fix : Modal コンポーネントの引数を設定

--- a/src/pages/dev/components/index.astro
+++ b/src/pages/dev/components/index.astro
@@ -26,7 +26,20 @@ import Accordion from "@src/components/parts/Accordion.astro";
         bodyText={["テキストテキストテキスト", "テキストテキスト"]}
       />
 
-      <Modal />
+      <Modal
+        buttonText={[
+          'モーダルボタン',
+        ]}
+        headingLevel={2}
+        headingText={[
+          'モーダル見出し',
+        ]}
+        bodyText={[
+          'テキストテキストテキスト',
+          'テキストテキストテキスト',
+          'テキストテキストテキスト',
+        ]}
+      />
 
       <Text text={["テキストテキストテキスト", "テキストテキスト<sup>※</sup>テキストテキスト"]} />
 
