fix: build 時のバグを修正
- 型を定義
- 存在しないファイルの参照を削除

--- a/src/components/parts/Modal.astro
+++ b/src/components/parts/Modal.astro
@@ -9,7 +9,7 @@ export interface Props {
 }
 
 const { buttonText, headingLevel, headingText, bodyText } = Astro.props;
-const Heading = `h${headingLevel}`;
+const Heading: any = `h${headingLevel}`;
 const uuid = v4();
 ---
 
