feat: タブ機能を作成

--- a/src/pages/dev/components/index.astro
+++ b/src/pages/dev/components/index.astro
@@ -8,6 +8,7 @@ import LinkButton from "@src/components/parts/LinkButton.astro";
 import Toggle from "@src/components/parts/Toggle.astro";
 import Modal from "@src/components/parts/Modal.astro";
 import Accordion from "@src/components/templates/Accordion.astro";
+import Tab from "@src/components/parts/Tab.astro";
 ---
 
 <BaseLayout
@@ -40,6 +41,8 @@ import Accordion from "@src/components/templates/Accordion.astro";
       />
 
       <Accordion />
+
+      <Tab />
 
       <MediaImage
         imgSrc="/assets/image/dummy.webp"
