feat: デフォルトで表示するタブを指定できるように設定

--- a/src/components/parts/Tab.astro
+++ b/src/components/parts/Tab.astro
@@ -6,7 +6,7 @@
 // const { text } = Astro.props;
 ---
 
-<div class="root tab">
+<div class="root tab" data-default-display="1">
   <div class="tab__button__wrap">
     <button class="tab__button">タブボタン1</button>
     <button class="tab__button">タブボタン2</button>
