--- a/src/components/parts/Tab.astro
+++ b/src/components/parts/Tab.astro
@@ -1,9 +1,4 @@
 ---
-// export interface Props {
-//   text: Array<string>;
-// }
-
-// const { text } = Astro.props;
 ---
 
 <div class="root tab" data-default-display="1">
@@ -12,10 +7,14 @@
     <button class="tab__button">タブボタン2</button>
   </div>
 
+  <!--
+    デフォルトで表示したいタブの aria-hidden を false に設定
+    false に設定できるのは .tab__body の中で1つのみ
+  -->
   <div class="tab__body__wrap">
     <div
       class="tab__body"
-      aria-hidden="true"
+      aria-hidden="false"
     >
       <p>テキストテキストテキスト</p>
     </div>
