--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import BaseLayout from "@layouts/BaseLayout.astro";
 import Section from "@src/components/common/Section.astro";
 import Heading from "@src/components/parts/Heading.astro";
 import Text from "@src/components/parts/Text.astro";
+import ListLink from "@src/components/parts/ListLink.astro";
 import Posts from "@src/components/templates/Posts.astro";
 ---
 
@@ -19,6 +20,21 @@ import Posts from "@src/components/templates/Posts.astro";
       />
 
       <Text text={["テキストテキストテキスト", "テキストテキスト<sup>※</sup>テキストテキスト"]} />
+
+      <ListLink
+        link={
+          [
+            {
+              href: '/dev/pagelist/',
+              text: 'ページ一覧',
+            },
+            {
+              href: '/dev/components/',
+              text: 'コンポーネント一覧',
+            }
+          ]
+        }
+      />
 
       <Posts />
     </Section>
