feat: Heading コンポーネントの見た目を修正、それに合わせた修正

--- a/src/components/common/Footer.astro
+++ b/src/components/common/Footer.astro
@@ -10,6 +10,7 @@
 
   // ---------- 基底要素 ----------
   .root {
+    margin-top: g.rem(40px);
     padding: g.rem(20px) 0;
 
     @include g.mediaQuery() {
