--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,6 +21,11 @@ import Posts from "@src/components/templates/Posts.astro";
 
       <Text text={["テキストテキストテキスト", "テキストテキスト<sup>※</sup>テキストテキスト"]} />
 
+      <Heading
+        level={2}
+        text="見出しレベル2"
+      />
+
       <ListLink
         link={
           [
