--- a/src/components/templates/Posts.astro
+++ b/src/components/templates/Posts.astro
@@ -19,5 +19,6 @@ const posts = await Astro.glob("../../pages/posts/*.md");
 
   // ---------- 基底要素 ----------
   .root {
+    margin-top: g.rem(40px);
   }
 </style>
