--- a/src/components/parts/Text.astro
+++ b/src/components/parts/Text.astro
@@ -10,7 +10,6 @@ const { text } = Astro.props;
   {
     text.map(item => (
       <p
-        class="text"
         set:html={item}
       />
     ))
@@ -30,8 +29,9 @@ const { text } = Astro.props;
     }
   }
 
-  // ---------- テキスト要素 ----------
-  .text + p {
-    margin-top: 0.5em;
+  .root + .root {
+    margin-top: 1em;
   }
+
+  // ---------- テキスト要素 ----------
 </style>
