feat: 各コンポーネントに背景色を設定

--- a/src/components/parts/Tab.astro
+++ b/src/components/parts/Tab.astro
@@ -47,6 +47,7 @@
   .tab__button {
     flex: 1 1 0;
     padding: g.rem(10px);
+    background: #fff;
     border: 1px solid g.$base-color;
     border-radius: g.rem(10px) g.rem(10px) 0 0;
   }
@@ -54,11 +55,13 @@
   // ---------- 本体要素 ----------
   .tab__body__wrap {
     padding: g.rem(20px);
+    background: #fff;
     border: 1px solid g.$base-color;
     position: relative;
     top: g.rem(-1px);
     z-index: 1;
   }
 
-  .tab__body {}
+  // .tab__body {
+  // }
 </style>
