--- a/src/components/parts/Toggle.astro
+++ b/src/components/parts/Toggle.astro
@@ -39,6 +39,7 @@ const { buttonText, bodyText } = Astro.props;
   .root {
     width: 100%;
     margin-top: g.rem(40px);
+    background: #fff;
     border: 1px solid g.$base-color;
   }
 
