--- a/src/components/templates/Accordion.astro
+++ b/src/components/templates/Accordion.astro
@@ -42,6 +42,7 @@ import AccordionItem from "../parts/AccordionItem.astro";
     gap: g.rem(20px);
   }
 
-  // .root > ul > li {
-  // }
+  .root > ul > li {
+    background: #fff;
+  }
 </style>
