feat: LinkButton コンポーネントの blank 引数を任意に設定

--- a/src/components/parts/LinkButton.astro
+++ b/src/components/parts/LinkButton.astro
@@ -2,7 +2,7 @@
 export interface Props {
   text: string;
   href: string;
-  blank: boolean;
+  blank?: boolean;
 }
 
 const { text, href, blank } = Astro.props;
