feat: List コンポーネントの説明文を記述

--- a/src/pages/dev/components/index.astro
+++ b/src/pages/dev/components/index.astro
@@ -144,7 +144,9 @@ import ListLink from "@src/components/parts/ListLink.astro";
 
       <List
         text={[
-          "コンポーネント説明",
+          "引数 text（必須）は配列の要素ごとに li 要素が生成されます",
+          "配列内で HTML 要素を記述すると、 HTML 要素として出力されます",
+          "上記方法で出力された HTML 要素はコンポーネントファイル内で CSS の設定ができません",
         ]}
       />
     </Section>
