refactor: Text コンポーネントの説明文に引数が必須であることの記述を追記

--- a/src/pages/dev/components/index.astro
+++ b/src/pages/dev/components/index.astro
@@ -40,7 +40,7 @@ import ListLink from "@src/components/parts/ListLink.astro";
 
       <List
         text={[
-          "引数 text は配列の要素ごとに p 要素が生成されます",
+          "引数 text（必須）は配列の要素ごとに p 要素が生成されます",
           "改行したいときは配列の要素ごとに設定してください",
           "Text コンポーネント内の p 要素同士には上下余白はありません",
           "上下余白を設定したい場合は Text コンポーネントを複数使用してください",
