feat: Toggle コンポーネントの説明文を記述

--- a/src/pages/dev/components/index.astro
+++ b/src/pages/dev/components/index.astro
@@ -210,7 +210,9 @@ import ListLink from "@src/components/parts/ListLink.astro";
 
       <List
         text={[
-          "コンポーネント説明",
+          "トグル機能を制御するコンポーネントです",
+          "引数 buttonText（必須）はトグルを開閉するボタンに表示するテキストを設定します",
+          "引数 bodyText（必須）はトグルで開閉される要素に表示するテキストを設定します",
         ]}
       />
     </Section>
