--- a/src/pages/dev/components/index.astro
+++ b/src/pages/dev/components/index.astro
@@ -221,7 +221,7 @@ import ListLink from "@src/components/parts/ListLink.astro";
     <Section>
       <Heading
         level={2}
-        text="Accordion コンポーネント"
+        text="Accordion コンポーネント、 AccordionItem コンポーネント"
       />
 
       <Accordion />
@@ -233,7 +233,9 @@ import ListLink from "@src/components/parts/ListLink.astro";
 
       <List
         text={[
-          "コンポーネント説明",
+          "アコーディオン機能を制御するコンポーネントです",
+          "AccordionItem の引数 buttonText（必須）は各トグルを開閉するボタンに表示するテキストを設定します",
+          "AccordionItem の引数 bodyText（必須）は各トグルで開閉される要素に表示するテキストを設定します",
         ]}
       />
     </Section>
