feat: Modal コンポーネントの説明文を記述

--- a/src/pages/dev/components/index.astro
+++ b/src/pages/dev/components/index.astro
@@ -267,7 +267,11 @@ import ListLink from "@src/components/parts/ListLink.astro";
 
       <List
         text={[
-          "コンポーネント説明",
+          "モーダル機能を制御するコンポーネントです",
+          "引数 buttonText（必須）はモーダルを開閉するボタンに表示するテキストを設定します",
+          "引数 headingLevel（必須）はモーダル内に設置する見出し要素のレベルを設定します",
+          "引数 headingText（必須）は見出しに表示するテキストを設定します",
+          "引数 bodyText（必須）はモーダルで開閉される要素に表示するテキストを設定します",
         ]}
       />
     </Section>
