feat: モーダル内にフォーカス可能な要素がない場合の挙動を設定

--- a/src/components/parts/Modal.astro
+++ b/src/components/parts/Modal.astro
@@ -33,11 +33,7 @@ const uuid = v4();
 
       {bodyText.map(item => <p>{item}</p>)}
 
-      <a href="__dummy__">ダミーリンク</a>
-
-      <a href="__dummy__">ダミーリンク</a>
-
-      <a href="__dummy__">ダミーリンク</a>
+      <!-- <a href="__dummy__">ダミーリンク</a> -->
     </div>
   </div>
 </div>
