refactor: コンポーネント内に記述されていた説明文をコンポーネントリストに移行

--- a/src/pages/dev/components/index.astro
+++ b/src/pages/dev/components/index.astro
@@ -293,6 +293,8 @@ import ListLink from "@src/components/parts/ListLink.astro";
       <List
         text={[
           "タブ機能を制御するコンポーネントです",
+          "デフォルトで表示したいタブの aria-hidden を false に設定",
+          "false に設定できるのは .tab__body の中で1つのみ",
         ]}
       />
     </Section>
